profilelist1exp/unpackaged/objects/Revenue__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Revenue</relationshipLabel>
        <relationshipName>Revenue</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Client_QTR_Margin__c</fullName>
        <label>Client QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_QTR_Rev__c</fullName>
        <label>Client QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DSG_QTR_Margin__c</fullName>
        <label>DSG QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DSG_QTR_Rev__c</fullName>
        <label>DSG QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Desktop_QTR_Margin__c</fullName>
        <label>Desktop QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Desktop_QTR_Rev__c</fullName>
        <label>Desktop QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_QTR_Margin__c</fullName>
        <label>Direct QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_QTR_Rev__c</fullName>
        <label>Direct QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMC_QTR_Margin__c</fullName>
        <label>EMC QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMC_QTR_Rev__c</fullName>
        <label>EMC QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Enterprise_QTR_Margin__c</fullName>
        <label>ESG QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Enterprise_QTR_Rev__c</fullName>
        <label>ESG QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FiscalYearQuarter__c</fullName>
        <formula>Fiscal_Year__c &amp; Fiscal_Quarter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FiscalYearQuarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <label>Fiscal Quarter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imaging_QTR_Margin__c</fullName>
        <label>Imaging QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Imaging_QTR_Rev__c</fullName>
        <label>Imaging QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internet_of_Things_QTR_Margin__c</fullName>
        <label>Internet of Things QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internet_of_Things_QTR_Rev__c</fullName>
        <label>Internet of Things QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Networking_QTR_Margin__c</fullName>
        <label>Networking QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Networking_QTR_Rev__c</fullName>
        <label>Networking QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Tied_QTR_Margin__c</fullName>
        <label>Non Tied QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Tied_QTR_Rev__c</fullName>
        <label>Non Tied QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notebook_QTR_Margin__c</fullName>
        <label>Notebook QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notebook_QTR_Rev__c</fullName>
        <label>Notebook QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_QTR_Margin__c</fullName>
        <label>Other QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_QTR_Rev__c</fullName>
        <label>Other QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_QTR_Margin__c</fullName>
        <label>Partner QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_QTR_Rev__c</fullName>
        <label>Partner QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Power_Vault_QTR_Rev__c</fullName>
        <label>Power Vault QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Powervault_QTR_Margin__c</fullName>
        <label>Powervault QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_Filter_Date__c</fullName>
        <label>Report Filter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Revenue External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>S_P_QTR_Margin__c</fullName>
        <label>S&amp;P QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>S_P_QTR_Rev__c</fullName>
        <label>S&amp;P QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Server_QTR_Margin__c</fullName>
        <label>Server QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Server_QTR_Rev__c</fullName>
        <label>Server QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_QTR_Margin__c</fullName>
        <label>Services QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_QTR_Rev__c</fullName>
        <label>Services QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Storage_QTR_Margin__c</fullName>
        <label>Storage QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Storage_QTR_Rev__c</fullName>
        <label>Storage QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tablets_QTR_Margin__c</fullName>
        <label>Tablets QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tablets_QTR_Rev__c</fullName>
        <label>Tablets QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRevenue__c</fullName>
        <formula>IF( OR(ISNULL(Non_Tied_QTR_Rev__c),ISNULL(S_P_QTR_Rev__c),ISNULL(Server_QTR_Rev__c),ISNULL( Notebook_QTR_Rev__c),ISNULL(EMC_QTR_Rev__c),ISNULL(Power_Vault_QTR_Rev__c),ISNULL(Imaging_QTR_Rev__c ),ISNULL(Desktop_QTR_Rev__c),ISNULL(Workstation_QTR_Rev__c)),0,Non_Tied_QTR_Rev__c + S_P_QTR_Rev__c + Server_QTR_Rev__c + Notebook_QTR_Rev__c + EMC_QTR_Rev__c + Power_Vault_QTR_Rev__c + Imaging_QTR_Rev__c + Desktop_QTR_Rev__c + Workstation_QTR_Rev__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalRevenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_QTR_Margin__c</fullName>
        <label>Total QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_QTR_Rev__c</fullName>
        <label>Total QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Workstation_QTR_Margin__c</fullName>
        <label>Workstation QTR Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Workstation_QTR_Rev__c</fullName>
        <label>Workstation QTR Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Revenue</label>
    <nameField>
        <displayFormat>Rev-{0000000}</displayFormat>
        <label>Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>